--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-calendars": "^1.20.0",
+    "react-native-modal": "^6.5.0",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.11.2"
   },
