--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.4.1",
     "react-native": "0.56.0",
+    "react-native-action-button": "^2.8.4",
     "react-native-calendars": "^1.20.0",
     "react-native-modal": "^6.5.0",
     "react-native-vector-icons": "^5.0.0",
